--- a/app/views/admin/admin/competency.html.erb
+++ b/app/views/admin/admin/competency.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, "competency management") %>
-<% provide(:page_title, "Competency Management") %>
-<% provide(:page_sub_title, "manage competency models") %>
+<% provide(:title, t('competency.page.title')) %>
+<% provide(:page_title, t('competency.page.title')) %>
+<% provide(:page_sub_title, t('competency.page.sub_title')) %>
 <% provide(:page_icon, "iconfa-sitemap") %>
 
 <% content_for :breadcrumbs do %>
-<%= content_tag(:li, "Competency Management") %>
+<%= content_tag(:li, t('competency.page.title')) %>
 <% end %>
 
 <% content_for :javascript do %>
@@ -21,9 +21,9 @@ $(function() {
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <h3 class="subtitle">Competency Model</h3>
+    <h3 class="subtitle"><%= t('competency.all.title') %></h3>
     <div class="divider15"></div>
-        <h4 class="widgettitle"><span class="iconfa-signal"></span> <%= @position ? "Competency Requirements for " + @position.name : "Competency Model Summary" %></h4>
+        <h4 class="widgettitle"><span class="iconfa-signal"></span> <%= @position ? t("competency.all.requiremnet") + @position.name : t("competency.all.sub_title") %></h4>
     <% if (@competencies and @competencies.size == 0) and (@position) %>
     <div class="widgetcontent">
       None
@@ -34,7 +34,7 @@ $(function() {
         <% if @competencies %>
         <% @competencies.each do |c| %>
         <div class="a-header">
-          <a href="#"><%= c.name %><span class="pull-right"><%= "created at " + distance_of_time_in_words_to_now(c.created_at) + ' ago' %></span></a>
+          <a href="#"><%= c.name %><span class="pull-right"><%= t('competency.all.create') + distance_of_time_in_words_to_now(c.created_at) + t('competency.all.ago') %></span></a>
         </div>
         <div class="a-content">
           <%= content_tag(:h5, "胜任力描述： " + c.description) %>
@@ -107,16 +107,16 @@ $(function() {
   </div> <!--span 8-->
 
   <div id="dashboard-right" class="span4">
-    <h3 class="subtitle">Manage Competency</h3>
+    <h3 class="subtitle"><%= t("competency.all.manage") %></h3>
     <div class="divider15"></div>
 
     <div class="well">
-      <a href="#" class="btn btn-primary disabled"><i class="iconfa-plus icon-white"></i> Create New Competency</a>
-      <a href="<%= export_competencies_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> Export As CSV</a>
+      <a href="#" class="btn btn-primary disabled"><i class="iconfa-plus icon-white"></i><%= t('competency.all.new') %></a>
+      <a href="<%= export_competencies_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t('competency.all.export') %></a>
     </div>
 
 
-    <h4 class="widgettitle"> Import Competency Model</h4>
+    <h4 class="widgettitle"> <%= t('competency.all.import_title')%></h4>
     <div class="widgetcontent">
       <%= form_tag import_competencies_path, multipart: true do %>
       <div class="fileupload fileupload-new" data-provides="fileupload">
@@ -125,27 +125,27 @@ $(function() {
           <i class="iconfa-file fileupload-exists"></i>
           <span class="fileupload-preview"></span>
           </div>
-          <span class="btn btn-file"><span class="fileupload-new">Select file</span>
-          <span class="fileupload-exists">Change</span>
+          <span class="btn btn-file"><span class="fileupload-new"><%=  t('competency.all.select') %></span>
+          <span class="fileupload-exists"><%= t('competency.all.change') %></span>
           <input class="file optional" id="file" name="file" type="file" /></span>
-          <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
+          <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('competency.all.remove') %></a>
         </div>
       </div>
-      <%= submit_tag "Import Competency".html_safe, :class => "btn btn-primary submit-import" %>
+      <%= submit_tag t("competency.all.import").html_safe, :class => "btn btn-primary submit-import" %>
       <% end %>
     </div>
 
-    <h3 class="subtitle">Filter</h3>
+    <h3 class="subtitle"><%= t('competency.all.filter')%></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"> Filter</h4>
+    <h4 class="widgettitle"> <%= t('competency.all.filter') %></h4>
     <div class="widgetcontent">
       <%= form_tag competencies_path, :method => 'get' do %>
       <div>
-        <%= label_tag :position_id, 'Position:' %>
+        <%= label_tag :position_id, t('competency.all.position') %>
         <%= collection_select(nil, :position_id, Position.all, :id, :name, :prompt => false) %>
       </div>
-        <%= submit_tag "Filter Competency".html_safe, :class => "btn btn-primary" %>
-        <%= link_to "Clear Filter",  competencies_path %>
+        <%= submit_tag t("competency.all.filter_condition").html_safe, :class => "btn btn-primary" %>
+        <%= link_to t("competency.all.clear_filter"),  competencies_path %>
       <% end %>
     </div>
   </div>
