--- a/app/views/admin/admin/position.html.erb
+++ b/app/views/admin/admin/position.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, "positions management") %>
-<% provide(:page_title, "Positions Management") %>
-<% provide(:page_sub_title, "manage company positions") %>
+<% provide(:title, t("position.page.title")) %>
+<% provide(:page_title, t("position.page.title")) %>
+<% provide(:page_sub_title, t("position.page.sub_title")) %>
 <% provide(:page_icon, "iconfa-reorder") %>
 
 <% content_for :breadcrumbs do %>
-<%= content_tag(:li, "Positions Management") %>
+<%= content_tag(:li, t("position.page.title")) %>
 <% end %>
 
 <% content_for :javascript do %>
@@ -15,11 +15,11 @@
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
 
-    <h3 class="subtitle">Position</h3>
+    <h3 class="subtitle"><%= t("position.all.title") %></h3>
     <div class="divider15"></div>
     <div class="widgetbox">
       <div class="headtitle">
-        <h4 class="widgettitle"><span class="iconfa-reorder"></span> Positions</h4>
+        <h4 class="widgettitle"><span class="iconfa-reorder"></span> <%= t("position.all.title") %></h4>
       </div>
       <% if @positions.size == 0 %>
       <div class="widgetcontent">
@@ -29,19 +29,19 @@
       <table class="table table-bordered responsive">
         <thead>
           <tr>
-            <th class="center">Action</th>
-            <th class="center">Name</th>
-            <th class="center">Description</th>
-            <th class="center">Related Competency</th>
-            <th class="center">Related Courses</th>
+            <th class="center"><%= t("position.all.action") %></th>
+            <th class="center"><%= t("position.all.name") %></th>
+            <th class="center"><%= t("position.all.description") %></th>
+            <th class="center"><%= t("position.all.relate_competency") %></th>
+            <th class="center"><%= t("position.all.relate_couse") %></th>
           </tr>
         </thead>
         <tbody>
           <% @positions.each do |p| %>
           <tr>
             <td class="center">
-              <%= link_to "Delete", "#", {:class => "btn btn-danger disabled"} %>
-              <%= link_to "Edit", edit_position_path(p), {:class => "btn btn-primary"} %>
+              <%= link_to t("position.all.delete"), "#", {:class => "btn btn-danger disabled"} %>
+              <%= link_to t("position.all.edit"), edit_position_path(p), {:class => "btn btn-primary"} %>
             </td>
             <td class="center"><%= p.name %></td>
             <td class="center"><%= p.description %></td>
@@ -71,14 +71,14 @@
   </div>
 
   <div id="dashboard-right" class="span4">
-    <h3 class="subtitle">Manage Positions</h3>
+    <h3 class="subtitle"><%= t("position.all.manage") %></h3>
     <div class="divider15"></div>
     <div class="well">
-      <a href="#" class="btn btn-primary disabled"><i class="iconfa-plus icon-white"></i> Create New Position</a>
-      <a href="<%= export_positions_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> Export As CSV</a>
+      <a href="#" class="btn btn-primary disabled"><i class="iconfa-plus icon-white"></i><%= t("position.all.create")%></a>
+      <a href="<%= export_positions_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t("position.all.export")%></a>
     </div>
 
-    <h4 class="widgettitle"> Import Position</h4>
+    <h4 class="widgettitle"><%= t("position.all.import") %></h4>
     <div class="widgetcontent">
       <%= form_tag import_positions_path, multipart: true do %>
       <div class="fileupload fileupload-new" data-provides="fileupload">
@@ -87,13 +87,13 @@
           <i class="iconfa-file fileupload-exists"></i>
           <span class="fileupload-preview"></span>
           </div>
-          <span class="btn btn-file"><span class="fileupload-new">Select file</span>
-          <span class="fileupload-exists">Change</span>
+          <span class="btn btn-file"><span class="fileupload-new"><%= t("position.all.select") %></span>
+          <span class="fileupload-exists"><%= t("position.all.change") %></span>
           <input class="file optional" id="file" name="file" type="file" /></span>
-          <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
+          <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t("position.all.remove") %></a>
         </div>
       </div>
-      <%= submit_tag "Import Positions".html_safe, :class => "btn btn-primary submit-import" %>
+      <%= submit_tag t("position.all.import").html_safe, :class => "btn btn-primary submit-import" %>
       <% end %>
     </div>
   </div>
