--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
 <% content_for :breadcrumbs do %>
 <% if current_user.admin? %>
-<li><%= link_to " Users Managerment ", admin_manage_users_path %> <span class="separator"></span></li>
+<li><%= link_to t("users.page.title"), admin_manage_users_path %> <span class="separator"></span></li>
 <% end %>
 <%= content_tag(:li, @user.name) %>
 <% end %>
@@ -26,12 +26,12 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <h3 class="subtitle">Courses</h3>
+    <h3 class="subtitle"><%= t("course.all.title") %></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"><span class="iconfa-tasks icon-white"></span> Teach Courses </h4>
+    <h4 class="widgettitle"><span class="iconfa-tasks icon-white"></span><%= t("course.all.sub_title1") %></h4>
     <% if @teach_courses.size == 0 %>
     <div class="widgetcontent">
-      <p>None</p>
+      <p><%= t("dashboard.common.none") %></p>
     </div>
     <% else %>
     <div class="widgetcontent nopadding">
@@ -41,9 +41,9 @@
           <%= image_tag course_cover_path(c, :normal), :class => "pull-left" %>
           <div class="course-info">
             <h4><%= link_to c.title, course_path(c) %></h4>
-            <h6>created by <%= link_to c.teacher.name, user_path(c.teacher) %> at <%= distance_of_time_in_words_to_now(c.created_at) + ' ago' %></h6>
+            <h6><%= link_to c.teacher.name, user_path(c.teacher) %><%= t("course.all.create")%> <%= distance_of_time_in_words_to_now(c.created_at) + t("course.all.ago") %></h6>
             <p><%= c.description %></p>
-            <a href="<%= course_path(c) %>" class="btn btn-primary btn-small"><span class="iconfa-info-sign icon-white"></span> View Details</a>
+            <a href="<%= course_path(c) %>" class="btn btn-primary btn-small"><span class="iconfa-info-sign icon-white"></span><%=t("course.all.details") %></a>
           </div>
         </li>
         <% end %>
@@ -53,10 +53,10 @@
     <% end %>
     <div class="divider15"></div>
 
-    <h4 class="widgettitle"><span class="iconfa-tasks icon-white"></span> Pending Courses </h4>
+    <h4 class="widgettitle"><span class="iconfa-tasks icon-white"></span><%= t("course.all.sub_title2") %></h4>
     <% if @pending_courses.size == 0 %>
     <div class="widgetcontent">
-      <p>None</p>
+      <p><%= t("dashboard.common.none") %></p>
     </div>
     <% else %>
     <div class="widgetcontent nopadding">
@@ -66,9 +66,9 @@
           <%= image_tag course_cover_path(c, :normal), :class => "pull-left" %>
           <div class="course-info">
             <h4><%= link_to c.title, course_path(c) %></h4>
-            <h6>created by <%= link_to c.teacher.name, user_path(c.teacher) %> at <%= distance_of_time_in_words_to_now(c.created_at) + ' ago' %></h6>
+            <h6><%= link_to c.teacher.name, user_path(c.teacher) %> <%= t("course.all.create")%> <%= distance_of_time_in_words_to_now(c.created_at) + t("course.all.ago") %></h6>
             <p><%= c.description %></p>
-            <a href="<%= course_path(c) %>" class="btn btn-primary btn-small"><span class="iconfa-info-sign icon-white"></span> View Details</a>
+            <a href="<%= course_path(c) %>" class="btn btn-primary btn-small"><span class="iconfa-info-sign icon-white"></span> <%=t("course.all.details") %></a>
           </div>
         </li>
         <% end %>
@@ -80,7 +80,7 @@
   </div><!-- span 8 -->
 
   <div id="dashboard-right" class="span4">
-    <h3 class="subtitle">User Informations</h3>
+    <h3 class="subtitle"><%= t("users.all.infor") %></h3>
     <div class="divider15"></div>
     <div class="well user-info-box">
       <div class="user-info-image">
@@ -101,10 +101,10 @@
       <div class="user-info">
         <h4><%= link_to @user.name, user_path(@user) %></h4>
         <ul class="info-details">
-          <li>Dept.: <%= @user.department %></li>
-          <li>Title: <%= @user.position.name %></li>
-          <li>Phone: <%= @user.phone_num %></li>
-          <li>Mobile: <%= @user.mobile_phone %></li>
+          <li><%= t("users.all.department") %>.: <%= @user.department %></li>
+          <li><%= t("users.all.position")%>: <%= @user.position.name %></li>
+          <li><%= t("users.all.telephone")%>: <%= @user.phone_num %></li>
+          <li><%= t("users.all.mobile")%>: <%= @user.mobile_phone %></li>
         </ul>
       </div>
     </div>
@@ -119,10 +119,10 @@
     </div>
     <% end %>
 
-    <h3 class="subtitle">Subordinates</h3>
+    <h3 class="subtitle"><%= t("users.all.subordinates")%></h3>
     <div class="well user-subordinates">
       <% unless @user.subordinates.size > 0 %>
-      None
+        <%= t("dashboard.common.none") %>
       <% else %>
       <ul>
       <% @user.subordinates.each do |s| %>
@@ -138,39 +138,39 @@
     </div>
     <div class="divider30"></div>
     
-    <h3 class="subtitle">Social Networks</h3>
+    <h3 class="subtitle"><%= t("users.all.social") %></h3>
     <div class="divider15"></div>
     <div class="tabbedwidget tab-primary">
       <ul>
-        <li><a href="#tabs-1">Followings</a></li>
-        <li><a href="#tabs-2">Follower</a></li>
-        <li><a href="#tabs-3">Recent Activity</a></li>
+        <li><a href="#tabs-1"><%= t('users.all.followings') %></a></li>
+        <li><a href="#tabs-2"><%= t('users.all.follower') %></a></li>
+        <li><a href="#tabs-3"><%= t('users.all.recent') %></a></li>
       </ul>
       <div id="tabs-1" class="">
-        None
+        <%= t("dashboard.common.none") %>
       </div>
       <div id="tabs-2" class="">
-        None
+        <%= t("dashboard.common.none") %>
       </div>
       <div id="tabs-3" class="">
-        None
+        <%= t("dashboard.common.none") %>
       </div>
     </div>
     <div class="divider30"></div>
 
-    <h3 class="subtitle">Blogs</h3>
+    <h3 class="subtitle"><%= t('users.all.blog') %></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle">My Blog</h4>
+    <h4 class="widgettitle"><%= t('users.all.myblog') %></h4>
     <div class="widgetcontent">
-      None
+      <%= t("dashboard.common.none") %>
     </div>
     <div class="divider30"></div>
 
-    <h3 class="subtitle">Knowledge Center</h3>
+    <h3 class="subtitle"><%= t('users.all.knowledge') %></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle">Follwing Questions</h4>
+    <h4 class="widgettitle"><%= t('users.all.question') %></h4>
     <div class="widgetcontent">
-      None
+      <%= t("dashboard.common.none") %>
     </div>
 
 
