--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -62,7 +62,7 @@
                         
     <div class="divider15"></div>
 
-    <h4 class="widgettitle"><span class="iconfa-tasks icon-white"></span> Pending Courses <span class="pull-right"><%= link_to "see all &#8594;".html_safe, user_courses_path(current_user) %></span></h4>
+    <h4 class="widgettitle"><span class="iconfa-tasks icon-white"></span><%= t("course.all.sub_title2") %><span class="pull-right"><%= link_to "see all &#8594;".html_safe, user_courses_path(current_user) %></span></h4>
     
     <% if @pending_courses.size == 0 %>
     <div class="widgetcontent">
@@ -76,9 +76,9 @@
           <%= image_tag course_cover_path(c, :normal), :class => "pull-left" %>
           <div class="course-info">
             <h4><%= link_to c.title, course_path(c) %></h4>
-            <h6>created by <%= link_to c.teacher.name, user_path(c.teacher) %> at <%= distance_of_time_in_words_to_now(c.created_at) + ' ago' %></h6>
+            <h6><%= link_to c.teacher.name, user_path(c.teacher) %> <%= t("course.all.create") %> <%= distance_of_time_in_words_to_now(c.created_at) + t("course.all.ago") %></h6>
             <p><%= c.description %></p>
-            <a href="<%= course_path(c) %>" class="btn btn-primary btn-small"><span class="iconfa-info-sign icon-white"></span> View Details</a>
+            <a href="<%= course_path(c) %>" class="btn btn-primary btn-small"><span class="iconfa-info-sign icon-white"></span><%= t("course.all.details") %></a>
           </div>
         </li>
         <% end %>
