--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,6 @@ form p.help-block {
   background-color: #fff;
 }
 
-a.btn {
+a.btn-primary, a.btn-info, a.btn-success, a.btn-warning, a.btn-danger, a.btn-inverse {
   color: #fff;
 }
