Add zh-CN for courses

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -19,10 +19,10 @@
         <i class="iconfa-file fileupload-exists"></i>
         <span class="fileupload-preview"></span>
         </div>
-        <span class="btn btn-file"><span class="fileupload-new">Select file</span>
-        <span class="fileupload-exists">Change</span>
+        <span class="btn btn-file"><span class="fileupload-new"><%= t("course.all.select") %></span>
+        <span class="fileupload-exists"><%= t("course.all.change") %></span>
         <input class="file optional" id="course_cover_image" name="course[cover_image]" type="file" /></span>
-        <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
+        <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t("course.all.remove") %></a>
       </div>
       <p class="help-block">No special characters.</p>
       </div>
@@ -38,10 +38,10 @@
         <i class="iconfa-file fileupload-exists"></i>
         <span class="fileupload-preview"></span>
         </div>
-        <span class="btn btn-file"><span class="fileupload-new">Select file</span>
-        <span class="fileupload-exists">Change</span>
+        <span class="btn btn-file"><span class="fileupload-new"><%= t("course.all.select") %></span>
+        <span class="fileupload-exists"><%= t("course.all.change") %></span>
         <input class="file optional" id="course_lesson" name="course[lesson]" type="file" /></span>
-        <a href="#" class="btn fileupload-exists" data-dismiss="fileupload">Remove</a>
+        <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t("course.all.remove") %></a>
       </div>
       <p class="help-block">Support SWF format only</p>
       </div>
