--- a/app/views/competencies/index.html.erb
+++ b/app/views/competencies/index.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, "competency library") %>
-<% provide(:page_title, "Competency Library") %>
-<% provide(:page_sub_title, "find out competency models") %>
+<% provide(:title, t("menu.user.competency")) %>
+<% provide(:page_title, t("menu.user.competency")) %>
+<% provide(:page_sub_title, t("competency.all.sub_title1")) %>
 <% provide(:page_icon, "iconfa-sitemap") %>
 
 <% content_for :breadcrumbs do %>
-<%= content_tag(:li, "Competency Library") %>
+<%= content_tag(:li, t("menu.user.competency")) %>
 <% end %>
 
 <% content_for :javascript do %>
@@ -21,12 +21,12 @@ $(function() {
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <h3 class="subtitle">Competency Model</h3>
+    <h3 class="subtitle"><%= t("competency.all.title") %></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"><span class="iconfa-signal"></span> <%= @position ? "Competency Requirements for " + @position.name : "Competency Model Summary" %></h4>
+    <h4 class="widgettitle"><span class="iconfa-signal"></span> <%= @position ? t("competency.all.requiremnet") + @position.name : t("competency.all.sub_title") %></h4>
     <% if (@competencies and @competencies.size == 0) and (@position) %>
     <div class="widgetcontent">
-      None
+      <%= t("dashboard.common.none")%>
     </div>
     <% else %>
     <div class="widgetcontent nopadding">
@@ -107,17 +107,17 @@ $(function() {
   </div> <!--span 8-->
 
   <div id="dashboard-right" class="span4">
-    <h3 class="subtitle">Filter</h3>
+    <h3 class="subtitle"><%= t("competency.all.filter") %></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"> Filter</h4>
+    <h4 class="widgettitle"> <%= t("competency.all.filter") %></h4>
     <div class="widgetcontent">
       <%= form_tag competencies_path, :method => 'get' do %>
       <div>
-        <%= label_tag :position_id, 'Position:' %>
+        <%= label_tag :position_id, t("course.all.position") %>
         <%= collection_select(nil, :position_id, Position.all, :id, :name, :prompt => false) %>
       </div>
-        <%= submit_tag "Filter Competency".html_safe, :class => "btn btn-primary" %>
-        <%= link_to "Clear Filter",  competencies_path %>
+        <%= submit_tag t("competency.all.filter_condition").html_safe, :class => "btn btn-primary" %>
+        <%= link_to t("competency.all.clear_filter"),  competencies_path %>
       <% end %>
     </div>
   </div>
