--- a/app/views/errors/error_500.html.erb
+++ b/app/views/errors/error_500.html.erb
@@ -12,7 +12,7 @@
             <% elsif current_user.admin? %>
             <a href="<%= admin_dashboard_path %>" class="btn btn-large">Go to Dashboard</a>
             <% else %>
-            <a href="<%= dashboard_user(current_user) %>" class="btn btn-large">Go to Dashboard</a>
+            <a href="<%= dashboard_user_path(current_user) %>" class="btn btn-large">Go to Dashboard</a>
             <% end %>
         </div>
     </div>
