--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,10 +14,6 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <div class="well">
-      <a href="<%= new_course_path %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> Create New Course</a>
-    </div>
-
     <h3 class="subtitle">Courses <%= @courses.total_count %></h3>
     <div class="divider15"></div>
     <div class="widgetbox">
@@ -51,6 +47,10 @@
   </div>
 
   <div id="dashboard-right" class="span4">
+    <div class="well">
+      <a href="<%= new_user_course_path(current_user) %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> Create New Course</a>
+    </div>
+
     <h3 class="subtitle">Filter</h3>
     <div class="divider15"></div>
     <h4 class="widgettitle"> Filter</h4>
