fix typo for translate.

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -27,9 +27,9 @@
     </div>
   </div>
   <div id="dashboard-right" class="span4">
-    <h3 class="subtitle"><%s t("course.all.tip") %></h3>
+    <h3 class="subtitle"><%= t("course.all.tip") %></h3>
     <div class="divider15"></div>
-    <h4 class="widgettitle"> <%s t("course.all.tips") %></h4>
+    <h4 class="widgettitle"> <%= t("course.all.tips") %></h4>
     <div class="widgetcontent">
       <%= t("dashboard.common.none") %>
     </div>
