--- a/app/views/admin/admin/user.html.erb
+++ b/app/views/admin/admin/user.html.erb
@@ -90,7 +90,7 @@
           <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('users.all.remove') %></a>
         </div>
       </div>
-      <%= submit_tag t('users.all.import').html_safe, :class => "btn btn-primary submit-import-test" %>
+      <%= submit_tag t('users.all.import').html_safe, :class => "btn btn-primary" %>
       <% end %>
     </div>
     
